<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otp_verification"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74sp"
        android:textColor="#000"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/enter_the_code_sent_to"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/_1234567890"
        />
    
    <com.chaos.view.PinView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="18sp"
        android:layout_gravity="center"
        app:itemSpacing="11sp"
        app:itemRadius="10sp"
        app:lineColor="#00154f"
        app:itemCount="4"
        />
    <Button
        android:onClick="Verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00154f"
        android:textColor="#f4af1b"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="44sp"
        android:text="@string/verify"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#000"
        android:layout_marginTop="24sp"
        android:text="@string/didn_t_received_the_verification_otp"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:textColor="#00154f"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="34sp"
        android:text="@string/resend_otp"/>




</LinearLayout>